cmake_minimum_required(VERSION 3.31)
project(runtrackC++)

set(CMAKE_CXX_STANDARD 14)

add_executable(job02 JOUR01/JOB02/job02.cpp)
add_executable(job03 JOUR01/JOB03/job03.cpp)
add_executable(job04 JOUR01/JOB04/job04.cpp)
add_executable(job05 JOUR01/JOB05/job05.cpp)
add_executable(job06 JOUR01/JOB06/job06.cpp)
add_executable(job07 JOUR01/JOB07/job07.cpp)
add_executable(job08 JOUR01/JOB08/job08.cpp)
add_executable(job09 JOUR01/JOB09/job09.cpp)
add_executable(job10 JOUR01/JOB10/job10.cpp)
add_executable(job11 JOUR01/JOB11/job11.cpp)
add_executable(job12 JOUR01/JOB12/job12.cpp)
add_executable(job13 JOUR01/JOB13/job13.cpp)
add_executable(job14 JOUR01/JOB14/job14.cpp)
add_executable(J2job01 JOUR02/JOB01/J2job01.cpp)
add_executable(J2job02 JOUR02/JOB02/J2job02.cpp)
add_executable(J2job03 JOUR02/JOB03/J2job03.cpp)
add_executable(J2job04 JOUR02/JOB04/J2job04.cpp)
add_executable(J2job05 JOUR02/JOB05/J2job05.cpp)
add_executable(J2job06 JOUR02/JOB06/J2job06.cpp)
add_executable(J2job07 JOUR02/JOB07/J2job07.cpp)
add_executable(J2Job08 JOUR02/JOB08/J2job08.cpp)
add_executable(J2job09 JOUR02/JOB09/J2job09.cpp)
add_executable(J2job10 JOUR02/JOB10/J2job10.cpp)
add_executable(J2job11 JOUR02/JOB11/J2job11.cpp)
add_executable(J2job12 JOUR02/JOB12/J2job12.cpp)
add_executable(J2job13 JOUR02/JOB13/J2job13.cpp)
add_executable(J2job14 JOUR02/JOB14/J2job14.cpp)
add_executable(J2job15 JOUR02/JOB15/J2job15.cpp)
